installed dependencies and created database

--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "morgan": "^1.9.0",
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "mapbox-gl": "^0.40.1"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mapbox-gl": "^0.40.1",
+    "path": "^0.12.7",
+    "pg": "^7.4.0",
+    "sequelize": "^4.22.11"
   }
 }
